[gd_scene load_steps=8 format=3 uid="uid://cxg0d15iwcpq8"]

[ext_resource type="Texture2D" uid="uid://ti5kfkiwn3sp" path="res://assets/sprites/enemys/enemys_atlas/big_eye.tres" id="1_a1vsd"]
[ext_resource type="Script" path="res://scenes/enemys/mm_1/big_eye.gd" id="1_afduo"]
[ext_resource type="Shader" path="res://resources/shaders/hit_flash.gdshader" id="2_y0bbo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5y46i"]
shader = ExtResource("2_y0bbo")
shader_parameter/active = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b2504"]
size = Vector2(29, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_n255q"]
radius = 141.128

[sub_resource type="RectangleShape2D" id="RectangleShape2D_75igc"]
size = Vector2(29, 40)

[node name="BigEye" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_afduo")
hp = 100
damage = 10

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_5y46i")
position = Vector2(3, 0)
texture = ExtResource("1_a1vsd")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_b2504")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_n255q")

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_75igc")

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
